--- a/src/main/resources/templates/content-orders-detail.html
+++ b/src/main/resources/templates/content-orders-detail.html
@@ -72,7 +72,7 @@
         <section class="content-header">
             <h1>
                 订单管理
-                <small>全部订单</small>
+                <small>订单详情</small>
             </h1>
             <ol class="breadcrumb">
                 <li><a href="/index"><i
