--- a/src/main/resources/templates/content-users-edit.html
+++ b/src/main/resources/templates/content-users-edit.html
@@ -4,7 +4,7 @@
     <!-- 页面meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>用户创建</title>
+    <title>用户编辑</title>
     <meta name="description" content="AdminLTE2定制版">
     <meta name="keywords" content="AdminLTE2定制版">
     <!-- Tell the browser to be responsive to screen width -->
@@ -69,14 +69,14 @@
         <!-- 内容头部 -->
         <section class="content-header">
             <h1>
-                用户管理 <small>用户表单</small>
+                用户管理 <small>用户编辑</small>
             </h1>
             <ol class="breadcrumb">
                 <li><a href="/index"><i
                         class="fa fa-dashboard"></i> 首页</a></li>
                 <li><a
                         href="/user/findAll">用户管理</a></li>
-                <li class="active">用户表单</li>
+                <li class="active">用户编辑</li>
             </ol>
         </section>
         <!-- 内容头部 /-->
