--- a/src/main/resources/templates/content-users-list.html
+++ b/src/main/resources/templates/content-users-list.html
@@ -67,14 +67,14 @@
         <!-- 内容头部 -->
         <section class="content-header">
             <h1>
-                用户管理 <small>全部用户</small>
+                用户管理 <small>用户列表</small>
             </h1>
             <ol class="breadcrumb">
                 <li><a href="/index"><i
                         class="fa fa-dashboard"></i> 首页</a></li>
                 <li><a
                         href="/users/findAll">用户管理</a></li>
-                <li class="active">全部用户</li>
+                <li class="active">用户列表</li>
             </ol>
         </section>
         <!-- 内容头部 /-->
