--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -47,7 +47,7 @@
             </li>
             <li class="treeview">
                 <a href="#">
-                    <i class="fa fa-cube"></i> <span>数据管理</span>
+                    <i class="fa fa-cube"></i> <span>运营管理</span>
                     <span class="pull-right-container"><i class="fa fa-angle-left pull-right"></i></span>
                 </a>
                 <ul class="treeview-menu">
