--- a/src/main/resources/templates/content-permission-edit.html
+++ b/src/main/resources/templates/content-permission-edit.html
@@ -4,7 +4,7 @@
     <!-- 页面meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>权限添加</title>
+    <title>权限编辑</title>
     <meta name="description" content="AdminLTE2定制版">
     <meta name="keywords" content="AdminLTE2定制版">
     <!-- Tell the browser to be responsive to screen width -->
@@ -69,14 +69,14 @@
         <!-- 内容头部 -->
         <section class="content-header">
             <h1>
-                权限资源管理
-                <small>权限资源表单</small>
+                权限管理
+                <small>权限编辑</small>
             </h1>
             <ol class="breadcrumb">
                 <li><a href="/index"><i
                         class="fa fa-dashboard"></i> 首页</a></li>
-                <li><a href="/permission/findAll">权限资源管理</a></li>
-                <li class="active">权限资源表单</li>
+                <li><a href="/permission/findAll">权限管理</a></li>
+                <li class="active">权限编辑</li>
             </ol>
         </section>
         <!-- 内容头部 /-->
