--- a/src/main/resources/templates/content-permission-list.html
+++ b/src/main/resources/templates/content-permission-list.html
@@ -67,14 +67,14 @@
         <!-- 内容头部 -->
         <section class="content-header">
             <h1>
-                权限管理 <small>全部权限</small>
+                权限管理 <small>权限列表</small>
             </h1>
             <ol class="breadcrumb">
                 <li><a href="/index"><i
                         class="fa fa-dashboard"></i> 首页</a></li>
                 <li><a
                         href="/permission/findAll">权限管理</a></li>
-                <li class="active">全部权限</li>
+                <li class="active">权限列表</li>
             </ol>
         </section>
         <!-- 内容头部 /-->
