--- a/src/main/resources/templates/content-role-edit.html
+++ b/src/main/resources/templates/content-role-edit.html
@@ -4,7 +4,7 @@
     <!-- 页面meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>角色创建</title>
+    <title>角色编辑</title>
     <meta name="description" content="AdminLTE2定制版">
     <meta name="keywords" content="AdminLTE2定制版">
     <!-- Tell the browser to be responsive to screen width -->
@@ -70,13 +70,13 @@
         <section class="content-header">
             <h1>
                 角色管理
-                <small>角色表单</small>
+                <small>角色编辑</small>
             </h1>
             <ol class="breadcrumb">
                 <li><a href="/index"><i
                         class="fa fa-dashboard"></i> 首页</a></li>
                 <li><a href="/role/findAll">角色管理</a></li>
-                <li class="active">角色表单</li>
+                <li class="active">角色编辑</li>
             </ol>
         </section>
         <!-- 内容头部 /-->
