--- a/src/main/resources/templates/content-role-list.html
+++ b/src/main/resources/templates/content-role-list.html
@@ -45,14 +45,14 @@
         <section class="content-header">
             <h1>
                 角色管理
-                <small>全部角色</small>
+                <small>角色列表</small>
             </h1>
             <ol class="breadcrumb">
                 <li><a href="/index"><i
                         class="fa fa-dashboard"></i> 首页</a></li>
                 <li><a
                         href="/role/findAll">角色管理</a></li>
-                <li class="active">全部角色</li>
+                <li class="active">角色列表</li>
             </ol>
         </section>
         <!-- 内容头部 /-->
