--- a/src/main/resources/templates/content-syslog-list.html
+++ b/src/main/resources/templates/content-syslog-list.html
@@ -68,14 +68,14 @@
         <section class="content-header">
             <h1>
                 日志管理
-                <small>全部日志</small>
+                <small>日志列表</small>
             </h1>
             <ol class="breadcrumb">
                 <li><a href="/index"><i
                         class="fa fa-dashboard"></i> 首页</a></li>
                 <li><a
                         href="/sysLog/findAll">日志管理</a></li>
-                <li class="active">全部日志</li>
+                <li class="active">日志列表</li>
             </ol>
         </section>
         <!-- 内容头部 /-->
