--- a/src/main/resources/templates/content-error.html
+++ b/src/main/resources/templates/content-error.html
@@ -60,21 +60,16 @@
         <section class="content">
             <div class="error-page">
                 <h2 class="headline text-red"> 500</h2>
-
                 <div class="error-content">
-                    <h3><i class="fa fa-warning text-red"></i> Oops! 页面程序有错误.</h3>
-
+                    <h3><i class="fa fa-warning text-red"></i> Oops! 页面程序错误.</h3>
                     <p>
                         你访问的页面发生错误, 你可以 <a href="/index">返回首页</a> 或者通过搜索查询
                     </p>
-
                     <form class="search-form" method="get" action="http://www.baidu.com/s?word">
                         <div class="input-group">
                             <input type="text" name="word" class="form-control" placeholder="搜索">
-
                             <div class="input-group-btn">
-                                <button type="submit" class="btn btn-warning btn-flat">
-                                    <i class="fa fa-search"></i>
+                                <button type="submit" class="btn btn-warning btn-flat"><i class="fa fa-search"></i>
                                 </button>
                             </div>
                         </div>
