--- a/src/main/resources/templates/content-users-list.html
+++ b/src/main/resources/templates/content-users-list.html
@@ -140,11 +140,11 @@
                                 <td th:text="${users.status}==1 ? '已开启' : '已关闭'"></td>
                                 <td class="text-center">
                                     <a th:href="@{'/users/query?id='+${users.id}}"
-                                       class="btn bg-blue btn-xs">修改</a>
+                                       class="btn bg-blue btn-xs btn-flat">修改</a>
                                     <a th:href="@{'/users/findUserByIdAndAllRole?id='+${users.id}}"
-                                       class="btn bg-green btn-xs">角色管理</a>
+                                       class="btn bg-green btn-xs btn-flat">角色管理</a>
                                     <a th:href="@{'/users/delete?ids='+${users.id}}"
-                                       th:classappend="${users.id==1?'disabled':''}" class="btn bg-red btn-xs">删除</a>
+                                       th:classappend="${users.id==1?'disabled':''}" class="btn bg-red btn-xs btn-flat">删除</a>
                                 </td>
                             </tr>
                             </tbody>
