--- a/src/main/resources/templates/base-login.html
+++ b/src/main/resources/templates/base-login.html
@@ -24,7 +24,8 @@
     <link rel="stylesheet" href="/plugins/adminLTE/css/AdminLTE.css">
     <link rel="stylesheet" href="/plugins/iCheck/square/blue.css">
 </head>
-<body class="hold-transition login-page" style='background-image: url("/img/photo2.png");background-attachment: fixed;background-size: 100% 100%;'>
+<body class="hold-transition login-page"
+      style='background-image: url("/img/photo2.png");background-attachment: fixed;background-size: 100% 100%;'>
 <div class="login-box">
     <div class="login-logo">
         <a href="content-index.html">AdminLTE</a>
@@ -44,18 +45,31 @@
             <div class="row">
                 <div class="col-xs-8">
                     <div class="checkbox icheck">
-                        <label><input type="checkbox" name="remember-me" value="true">记住密码</label>
+                        <label><input type="checkbox" name="remember-me" value="true"> 记住 下次自动登录</label>
                     </div>
                 </div>
                 <!-- /.col -->
                 <div class="col-xs-4">
-                    <button type="submit" class="btn btn-primary btn-block btn-flat"
-                    >登录</button>
+                    <button type="submit" class="btn btn-primary btn-block btn-flat">登录</button>
                 </div>
                 <!-- /.col -->
             </div>
         </form>
-        <a href="#">忘记密码</a><br>
+        <p class="text-center">- 或者 -</p>
+
+        <div class="row">
+            <div class="col-xs-6">
+                <a href="#" class="btn btn-block btn-social btn-success btn-flat"><i class="fa fa-weixin"></i>
+                    微信用户登录</a>
+            </div>
+            <div class="col-xs-6">
+                <a href="#" class="btn btn-block btn-social btn-info btn-flat"><i class="fa fa-qq"></i> QQ用户登录</a>
+            </div>
+        </div>
+        <!-- /.social-auth-links -->
+        <!--<br>-->
+        <!--<a href="#">忘记密码</a>-->
+        <!--<a href="all-admin-register.html" class="text-center">用户注册</a>-->
     </div>
     <!-- /.login-box-body -->
 </div>
@@ -67,7 +81,7 @@
 <script src="/plugins/bootstrap/js/bootstrap.min.js"></script>
 <script src="/plugins/iCheck/icheck.min.js"></script>
 <script>
-    $(function() {
+    $(function () {
         $('input').iCheck({
             checkboxClass: 'icheckbox_square-blue',
             radioClass: 'iradio_square-blue',
