--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -230,8 +230,7 @@
                         <!-- Menu Footer-->
                         <li class="user-footer">
                             <div class="pull-left">
-                                <a href="#" class="btn btn-default btn-flat"
-                                >修改密码</a>
+                                <a href="/profile" class="btn btn-default btn-flat">个人中心</a>
                             </div>
                             <div class="pull-right">
                                 <a href="/" class="btn btn-default btn-flat">注销</a>
